Added doctrine/dbal and oauth packages

--- a/weddingcart/composer.json
+++ b/weddingcart/composer.json
@@ -9,7 +9,11 @@
         "laravel/framework": "5.2.*",
         "laravel/socialite": "^2.0",
          "laravelcollective/html": "~5.2",
-        "nesbot/carbon": "^1.21"
+        "nesbot/carbon": "^1.21",
+        "oriceon/oauth-5-laravel": "dev-master",
+        "google/apiclient": "^2.0.0@RC",
+        "barryvdh/laravel-ide-helper": "^2.1",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
