--- a/weddingcart/composer.json
+++ b/weddingcart/composer.json
@@ -13,7 +13,8 @@
         "oriceon/oauth-5-laravel": "dev-master",
         "google/apiclient": "^2.0.0@RC",
         "barryvdh/laravel-ide-helper": "^2.1",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "mgallegos/laravel-jqgrid": "^1.0"
              
     },
     "require-dev": {
