--- a/weddingcart/composer.json
+++ b/weddingcart/composer.json
@@ -16,7 +16,8 @@
         "doctrine/dbal": "^2.5",
         "mgallegos/laravel-jqgrid": "^1.0",
         "laracasts/flash": "^2.0",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "softon/indipay": "^1.0"
              
     },
     "require-dev": {
